--- a/frontend/src/Component/Guardia/GestionarGuardias/GestionarGuardia.css
+++ b/frontend/src/Component/Guardia/GestionarGuardias/GestionarGuardia.css
@@ -26,7 +26,8 @@
   cursor: pointer;
 }
 .rs__option--is-focused {
-  background: #ff6b6b;
+  background: #ff6b6b !important;
+  color: #fff;
 }
 .rs__option--is-selected {
   background: #dc3545;
