--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -83,6 +83,10 @@ body{
   width: 120px;  /* corto */
 }
 
+.btn-medium {
+  width: 225px;
+}
+
 .btn-danger{
   background-color:#c95f58;
   border-color: var(--red-700);
